0.8.0 (currently working on)
- [#2622] Fix: Error when trying to create price with access using IRRE
- [#2812] Feature: Add a CSS class for vancancies on registration queue
- [#2833] Fix: Write tests for events with unlimitedVacancies
- [#2870] Fix: In registration column in list view the text "fully booked" is falsely displayed
- [#2037] Change: Drop the additional_times_places field
- [#2865] Change: Add the JavaScript file via TypoScript
- [#840] Change: Rename and move the flexforms file
- [#2864] Change: Use the field names as TypoScript array keys for the Formidable configuration
- [#2697] Change: Make the waiting list a checkbox and provide an update function from the old values
- [#2846] Fix: All tests in the testsuites, tx_seminars_pi1_eventEditor_testcase and tx_seminars_pi1_registrationEditor_testcase fail
- [#2828] Fix: No registration created for event with unlimited number of seats
- [#2800] Feature: Add time-slot model and mapper
- [#2789] Change: Move the formidable configuration from XML to TypoScript setup
- [#2827] Fix: mod2: Remove $this->doc->form = '<form action="" method="post">';
- [#2493] Change: Rename mod2 to BackEnd
- [#2753] Feature: Add speaker model and mapper
- [#2820] Fix: Events with unlimited Vacancies have red square
- [#2819] Fix: Events with no Date get red square
- [#2822] Fix: Uninitialized variable reads in some pi1 tests
- [#2817] Fix: Unit test failures in tx_seminars_seminarchild_testcase
- [#2805] Feature: For events with an unlimited number of seats, show an empty string in the vacancies column
- [#2815] Fix: Registration Link is hidden and fully booked string is shown when an event has unlimited vacancies
- [#2803] Change: Hide registration-related fields in the BE seminar editor if the seminar does not need registration
- [#2799] Change: Don't display the red/yellow/green square for events that have started or lie in the past
- [#2813] Change: <label for=""> does not use the values of the id attributes