@@ -48,6 +48,7 @@
 			<label index="label_country">Country</label>
 			<label index="label_attendees">Attendees</label>
 			<label index="label_vacancies">Vacancies</label>
+			<label index="label_unlimited">unlimited</label>
 			<label index="label_enough_attendees">Enough attendees</label>
 			<label index="label_is_full">Is full</label>
 			<label index="label_paymentmethod">Selected method of payment</label>
@@ -321,6 +322,7 @@ En persons tilmelding blev lige til en almindelig tilmelding til arrangementet:<
 			<label index="label_country">Land</label>
 			<label index="label_attendees">Teilnehmer</label>
 			<label index="label_vacancies">Freie Plätze</label>
+			<label index="label_unlimited">unbegrenzt</label>
 			<label index="label_enough_attendees">Genug Teilnehmer</label>
 			<label index="label_is_full">Ist ausgebucht</label>
 			<label index="label_paymentmethod">Gewählte Zahlungsart</label>
@@ -1179,6 +1181,7 @@ Une inscription vient d'être régularisée pour l'événement suivant:</label>
 			<label index="label_country" type="integer">93787849</label>
 			<label index="label_attendees" type="integer">12580046</label>
 			<label index="label_vacancies" type="integer">99017107</label>
+			<label index="label_unlimited" type="integer">156824688</label>
 			<label index="label_enough_attendees" type="integer">124413256</label>
 			<label index="label_is_full" type="integer">13790082</label>
 			<label index="label_interests" type="integer">163357902</label>
@@ -1764,6 +1767,7 @@ someone's registration just has become a regular registration of an event:</labe
 			<label index="label_country">Country</label>
 			<label index="label_attendees">Attendees</label>
 			<label index="label_vacancies">Vacancies</label>
+			<label index="label_unlimited">unlimited</label>
 			<label index="label_enough_attendees">Enough attendees</label>
 			<label index="label_is_full">Is full</label>
 			<label index="label_interests">Special interests</label>
